--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -41,9 +41,14 @@ indiv.sites <- data.frame(site = unique(compiled.pollen$sitename),
                           compiled.pollen[!duplicated(compiled.pollen$sitename), 4:5],
                           samples = as.vector(table(compiled.pollen$sitename)))
 
-points <- ggplot(indiv.sites) + 
-            geom_point(aes(x = long, y = lat, size = samples), alpha=0.3) +
-            theme_bw()
+map <- map_data('world')
+
+map <- subset(map, map$long > -100 & map$long < -40)
+map <- subset(map, map$lat > 20 & map$lat < 83)
+
+points <- ggplot(data = data.frame(map), aes(long, lat)) + geom_path(aes(group=group), color='black') +
+  geom_point(data = indiv.sites, aes(x = long, y = lat, size = samples), alpha=0.5) +
+  coord_map(xlim=c(-100, -40), ylim=c(21, 83)) + theme_bw()
 
 bins <- ggplot(compiled.pollen) + 
           geom_bar(aes(x = age), 
