--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -7,7 +7,10 @@ Abstract
 Introduction
 ------------------------
 Our investigation of non-analogues, both in the past and in the future is tied to differences from modern pollen data.  THe concern with a future of no-analogues is tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
-To assist in this endevour, we examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.
+
+To assist in this endevour, we examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.  The conceptual framework suggests that we were looking at landscape level turnover, not site turnover.  While site-level turnover is a commonly used metric in paleoecological analysis, it is hampered by its sensitivity to stochastic effects.  Large scale changes in vegetation at a signle site might not reflect the kinds of broad scale community change we expect to see under conditions of future climate change.  As such, comparing dissimilarity at a site to changes at a number of sites across the continent provides a better metric of landscape-scale dissimilarity.
+
+**Figure 1**. *Some sort of figure showing the conceptual difference between change at the site vs. change at the landscape.*
 
 Methods
 ------------------------
@@ -100,7 +103,7 @@ points <- ggplot(data = data.frame(map), aes(long, lat)) +
   geom_point(data = rf[rf$diss > ninefive, ], aes(x = long, y = lat), alpha=0.2, color = 'red') +
   coord_map(xlim=c(-100, -40), ylim=c(21, 65)) + theme_bw()
 
-grid.arrange(curve, points, nrow=2)
+grid.arrange(curve, points)
 
 ```
 **Figure X**. *Turnover through time in the Neotoma database.*
